<resources>
    <string name="app_name">CricVee</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyMatchNote">Team 2 won by X runs/Y wickets</string>
    <string name="dummyName">Team Name</string>
    <string name="dummyScore">Total: 195/9(20.0)</string>
    <string name="dummyScoreHomeScreen">Total: 888/80</string>
    <string name="dummyOvers">Overs: 88</string>
    <string name="no_internet">No Internet</string>
    <string name="home">HOME</string>
    <string name="more">MORE</string>
    <string name="players">PLAYERS</string>
    <string name="player_search_hint">Enter player name</string>
    <string name="statistics">STATISTICS</string>
    <string name="rank">Rank</string>
    <string name="team">TEAM</string>
    <string name="ratings">Ratings</string>
    <string name="points">Points</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="odi">ODI</string>
    <string name="test">TEST</string>
    <string name="t20i">T20I</string>
    <string name="recent_matches">RECENT MATCHES</string>
    <string name="vs">VS</string>
    <string name="upcomingStr">Upcoming</string>
    <string name="missing">Not Available</string>
    <string name="Batting">Batting</string>
    <string name="Bowling">Bowling</string>
    <string name="_125_00">125.00</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_40">40</string>
    <string name="_50">50</string>
    <string name="position">POSITION</string>
    <string name="batting_style">BATTING STYLE</string>
    <string name="bowling_style">BOWLING STYLE</string>
    <string name="career_recent_season">CAREER (RECENT SEASON)</string>
    <string name="batting">BATTING</string>
    <string name="bowling">BOWLING</string>
    <string name="batter">Batter</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="s_r">S/R</string>
    <string name="bowler">Bowler</string>
    <string name="o">O</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="eco">ECO</string>
    <string name="upcoming_matches">UPCOMING MATCHES</string>
    <string name="match_facts">Match Facts</string>
    <string name="match">Match:</string>
    <string name="series">Series:</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="toss">Toss:</string>
    <string name="man_of_the_match">Man of the match:</string>
    <string name="yet_to_decide">Yet to decide</string>
    <string name="_1st_umpire">1st Umpire:</string>
    <string name="unavailable">Unavailable</string>
    <string name="_2nd_umpire">2nd Umpire:</string>
    <string name="tv_3rd_umpire">TV/3rd Umpire:</string>
    <string name="referee">Referee:</string>
    <string name="playing_xi">Playing XI</string>
    <string name="benched">Benched</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="strike_N_rate">Strike\nRate</string>
    <string name="player_">Player 1</string>
    <string name="c_and_b_template">c wsfwk b csmoc</string>
    <string name="team_a_innings">Team A Innings</string>
    <string name="team_b_innings">Team B Innings</string>
    <string name="string_final">Final</string>
    <string name="countdown_string_format">31D:23H:59M:59S</string>
    <string name="sampleProfileName">Alvee Morshed</string>
    <string name="d_o_b">Date Of Birth</string>
    <string name="sample_country">Bangladesh</string>
    <string name="batsman">BATSMAN</string>
    <string name="sample_batting_style">RIGHT-HAND-BAT</string>
    <string name="sample_bowling_style">LEG-BREAK</string>
    <string name="sample_league_string">Bangladesh Premier League 2023\nFixture</string>
    <string name="sample_league_name2">Bangladesh Premier League | T20</string>

</resources>